[package]
name = "soydrop"
version = "0.1.0"
edition = "2021"
description = "Simple webapp for sharing text"
readme = "README.md"
license = "BSD-3-Clause OR GPL-2.0"
repository = "https://github.com/artnoi43/soydrop"
authors = ["Prem Phansuriyanon"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {git = "https://github.com/actix/actix-web.git", branch = "master"}
tokio = { version = "1", features = ["macros"] }
lazy_static = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
config = ">=0.13"
colored = "2"

[badges]
github = { repository = "artnoi43/soydrop", workflow = "main" }
maintenance = { status = "actively-developed" }
